Use correct spacing tokens rather than calc

--- a/draft-packages/menu/KaizenDraft/Menu/components/MenuContent.module.scss
+++ b/draft-packages/menu/KaizenDraft/Menu/components/MenuContent.module.scss
@@ -5,9 +5,9 @@
 @import "~@kaizen/deprecated-component-library-helpers/styles/layout";
 @import "~@kaizen/component-library/styles/layers";
 
-$side-padding: calc(1 / 2 * #{$kz-var-spacing-md});
+$side-padding: $kz-var-spacing-sm;
 $gutter: calc(#{$kz-var-spacing-md} * 1 / 6);
-$padding: calc(#{$kz-var-spacing-md} * 1 / 4);
+$padding: $kz-var-spacing-xs;
 
 .menuContent {
   display: flex;
